@@ -2,7 +2,10 @@ package com.sena.library_crud.service.impl;
 
 import com.sena.library_crud.dto.LoanDto;
 import com.sena.library_crud.entity.Loan;
+import com.sena.library_crud.entity.User;
+import com.sena.library_crud.entity.Volume;
 import com.sena.library_crud.enums.LoanStatus;
+import com.sena.library_crud.mapper.LoanMapper;
 import com.sena.library_crud.repository.LoanRepository;
 import com.sena.library_crud.repository.UserRepository;
 import com.sena.library_crud.repository.VolumeRepository;
@@ -13,7 +16,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class LoanServiceImpl implements LoanService {
@@ -27,16 +29,17 @@ public class LoanServiceImpl implements LoanService {
     @Autowired
     private VolumeRepository volumeRepository;
 
+    @Autowired
+    private LoanMapper loanMapper;
+
     @Override
     @Transactional
     public LoanDto create(LoanDto dto) {
-        Loan loan = new Loan();
-        loan.setLoanDate(dto.getLoanDate());
-        loan.setDueDate(dto.getDueDate());
+        User user = userRepository.findById(dto.getUserId()).orElseThrow();
+        Volume volume = volumeRepository.findById(dto.getVolumeId()).orElseThrow();
+        Loan loan = loanMapper.toEntity(dto, user, volume);
         loan.setStatus(LoanStatus.PENDING);
-        loan.setUser(userRepository.findById(dto.getUserId()).orElseThrow());
-        loan.setVolume(volumeRepository.findById(dto.getVolumeId()).orElseThrow());
-        return toDto(loanRepository.save(loan));
+        return loanMapper.toDto(loanRepository.save(loan));
     }
 
     @Override
@@ -45,35 +48,21 @@ public class LoanServiceImpl implements LoanService {
         Loan loan = loanRepository.findById(id).orElseThrow();
         loan.setReturnDate(java.time.LocalDate.now());
         loan.setStatus(LoanStatus.RETURNED);
-        return toDto(loanRepository.save(loan));
+        return loanMapper.toDto(loanRepository.save(loan));
     }
 
     @Override
     public List<LoanDto> getAll() {
-        return loanRepository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+        return loanRepository.findAll().stream().map(loanMapper::toDto).toList();
     }
 
     @Override
     public LoanDto getById(Long id) {
-        return loanRepository.findById(id).map(this::toDto).orElseThrow();
+        return loanRepository.findById(id).map(loanMapper::toDto).orElseThrow();
     }
 
     @Override
     public void delete(Long id) {
         loanRepository.deleteById(id);
-    }
-    
-    //Ayuda: metodo para convertir entidad a dto
-
-    private LoanDto toDto(Loan loan) {
-        LoanDto dto = new LoanDto();
-        dto.setId(loan.getId());
-        dto.setLoanDate(loan.getLoanDate());
-        dto.setDueDate(loan.getDueDate());
-        dto.setReturnDate(loan.getReturnDate());
-        dto.setStatus(loan.getStatus());
-        dto.setUserId(loan.getUser().getId());
-        dto.setVolumeId(loan.getVolume().getId());
-        return dto;
     }
 }
